force-app/main/default/objects/Purchase_Order__c/fields/BMG_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>BMG_Package_Code__c</fullName>
    <description>BMG or package code received from the builder PO source.</description>
    <inlineHelpText>Builder package or BMG code carried forward from Builder PO during migration.</inlineHelpText>
    <label>BMG Package Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>