force-app/main/default/objects/Purchase_Order__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder account associated with the canonical Purchase Order.</description>
    <inlineHelpText>Builder account for the Purchase Order. Builder PO Builder Account maps here.</inlineHelpText>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>