force-app/main/default/objects/Purchase_Order__c/fields/Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Name__c</fullName>
    <label>Builder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>