force-app/main/default/objects/Purchase_Order__c/fields/Builder_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Builder_Work_Order_Number__c</fullName>
    <description>Builder&apos;s own internal work order or job number. Used for cross-reference, customer service lookups, and builder reconciliation. Different from PO_Number__c which is the purchase order number.</description>
    <label>Builder Work Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>