force-app/main/default/objects/Purchase_Order__c/fields/Crew_Completed__c.field-meta.xml
<CustomField>
    <fullName>Crew_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew Completed</label>
    <type>Checkbox</type>
</CustomField>