force-app/main/default/objects/Purchase_Order__c/fields/Days_From_PO_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_From_PO_To_Start__c</fullName>
    <label>Days from PO to Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>