force-app/main/default/objects/Purchase_Order__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Division or market account associated with the canonical Purchase Order.</description>
    <inlineHelpText>Division account for the Purchase Order. Builder PO Division Account maps here.</inlineHelpText>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder POs (Division Account)</relationshipLabel>
    <relationshipName>Purchase_Orders_Division</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>