force-app/main/default/objects/Purchase_Order__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <label>Division Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>ASH</fullName>
            </value>
            <value>
                <fullName>TRIA</fullName>
            </value>
            <value>
                <fullName>GRVL</fullName>
            </value>
            <value>
                <fullName>COLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>