force-app/main/default/objects/Purchase_Order__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>Estimated start date used as the preferred date for Purchase Order pipeline timing.</description>
    <inlineHelpText>Preferred timing date for the PO pipeline. If blank, Requested Install Date is used.</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>