force-app/main/default/objects/Purchase_Order__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lot lookup associated with the canonical Purchase Order.</description>
    <inlineHelpText>Lot for the Purchase Order. Builder PO Lot maps here during migration.</inlineHelpText>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>