force-app/main/default/objects/Purchase_Order__c/fields/NFI_Count__c.field-meta.xml
<CustomField>
    <fullName>NFI_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this PO has been returned as Need Further Information (NFI). Incremented by flow each time Status__c transitions to NFI. Used for CS performance tracking and PO aging analysis.</description>
    <label>NFI Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>