force-app/main/default/objects/Purchase_Order__c/fields/Package_BMG_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_BMG_Status__c</fullName>
    <description>Review status for the package or BMG information associated with the Purchase Order.</description>
    <inlineHelpText>Use this to track whether package/BMG information is missing, matched, or needs review.</inlineHelpText>
    <label>Package/BMG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Mismatch Review</fullName>
            </value>
            <value>
                <fullName>Missing Package</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>