force-app/main/default/objects/Purchase_Order__c/fields/Pipeline_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket__c</fullName>
    <description>Legacy timing bucket field retained only for backward compatibility. Launch scheduling should use Status__c and Pipeline_Stage__c instead.</description>
    <label>Pipeline Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90+ Days</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>30+ Days</fullName>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>