force-app/main/default/objects/Purchase_Order__c/fields/Pipeline_Bucket_Calculation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket_Calculation_Notes__c</fullName>
    <label>Pipeline Bucket Calculation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>