force-app/main/default/objects/Purchase_Order__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <description>Launch pipeline stage for Builder PO intake through takeoff and scheduling readiness.</description>
    <inlineHelpText>Use launch PO stages only. The 90/60/30 timing buckets are retired and should not drive the board.</inlineHelpText>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO Received</fullName>
                <default>true</default>
                <label>PO Received</label>
            </value>
            <value>
                <fullName>Package Match Check</fullName>
            </value>
            <value>
                <fullName>CSM Review</fullName>
            </value>
            <value>
                <fullName>Takeoff Requested</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>WorkOrder Created</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>Closed / Converted</fullName>
            </value>
            <value>
                <fullName>Cancelled / Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>