force-app/main/default/objects/Purchase_Order__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Canonical builder-provided purchase order number used as the primary migration and integration match key.</description>
    <externalId>true</externalId>
    <inlineHelpText>Primary PO identifier from the builder source. Intended for migration matching and duplicate prevention.</inlineHelpText>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>