force-app/main/default/objects/Purchase_Order__c/fields/PO_Source__c.field-meta.xml
<CustomField>
    <fullName>PO_Source__c</fullName>
    <label>PO Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SupplyPro - DR Horton</fullName>
            </value>
            <value>
                <fullName>SupplyPro - Lennar</fullName>
            </value>
            <value>
                <fullName>Manual Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>