force-app/main/default/objects/Purchase_Order__c/fields/Requested_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Install_Date__c</fullName>
    <description>Builder-requested installation date used by the Purchase Order pipeline timing engine.</description>
    <inlineHelpText>Builder requested install date. Used as the timing fallback when Estimated Start Date is blank.</inlineHelpText>
    <label>Requested Install Date</label>
    <type>Date</type>
</CustomField>