force-app/main/default/objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Takeoff</fullName>
                <default>true</default>
                <label>PO Received</label>
            </value>
            <value>
                <fullName>Package Match Check</fullName>
            </value>
            <value>
                <fullName>Pending CS Review</fullName>
                <label>CSM Review</label>
            </value>
            <value>
                <fullName>Ready for Takeoff</fullName>
                <label>Takeoff Requested</label>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>Work Order Created</fullName>
                <label>WorkOrder Created</label>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Cancelled/Void</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Closed/Converted</label>
            </value>
            <value>
                <fullName>NFI</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <label>New (Legacy)</label>
            </value>
            <value>
                <fullName>Processed</fullName>
                <label>Processed (Legacy)</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <label>Open (Legacy)</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>Processing (Legacy)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>