force-app/main/default/objects/Purchase_Order__c/fields/Takeoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Status__c</fullName>
    <description>Mirrored takeoff status used by the Purchase Order pipeline. Does not change Takeoff approval behavior in Phase 1.</description>
    <inlineHelpText>Current takeoff status for pipeline visibility. Phase 1 does not alter Takeoff approval automation.</inlineHelpText>
    <label>Takeoff Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>