force-app/main/default/objects/Purchase_Order__c/fields/Timing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Timing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timing Rule</label>
    <referenceTo>Builder_PO_Timing_Rule__c</referenceTo>
    <relationshipLabel>Builder POs</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>