force-app/main/default/objects/Purchase_Order__c/fields/Timing_Rule_Min_Days__c.field-meta.xml
<CustomField>
    <fullName>Timing_Rule_Min_Days__c</fullName>
    <label>Timing Rule Min Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>