force-app/main/default/objects/Purchase_Order__c/fields/Timing_Rule_Uses_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Timing_Rule_Uses_Business_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timing Rule Uses Business Days</label>
    <type>Checkbox</type>
</CustomField>