force-app/main/default/objects/Purchase_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Canonical Purchase Order amount. Builder PO amount migrates here during source-of-truth cutover.</description>
    <inlineHelpText>Total amount for the Purchase Order. Builder PO Amount maps here during migration.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>