force-app/main/default/objects/Purchase_Order__c/listViews/PO_Exception_Queue_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>PO_Exception_Queue_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>PO Exception Queue</label>
    <queue>PO_Exception_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>